# loong-aegisgate

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  .trivyignore  ADOPTERS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  Dockerfile  GOVERNANCE.md  LICENSE  README.md  README_zh.md  SECURITY.md  VERSIONING.md  docker-compose.yaml  vcpkg-configuration.json  vcpkg.json
benchmarks/: CMakeLists.txt  bench_cache.cpp  bench_gateway.cpp  bench_guardrail.cpp  bench_metrics.cpp  bench_pipeline.cpp  bench_rate_limiter.cpp
sdk/python/: README.md  pyproject.toml
sdk/rust/: Cargo.toml  README.md
src/: CMakeLists.txt  main.cpp
src/agent/: orchestrator.cpp  orchestrator.h  tool_registry.cpp  tool_registry.h  tool_sandbox.cpp  tool_sandbox.h
src/auth/: auth_models.h  auth_service.cpp  auth_service.h  authorization.h  crypto_utils.cpp  crypto_utils.h  encryption.cpp  encryption.h  identity_mapper.cpp  identity_mapper.h  jwt_utils.cpp  jwt_utils.h  oidc_client.cpp  oidc_client.h  prompt_template_service.cpp  prompt_template_service.h  redis_session_store.cpp  redis_session_store.h  scim_service.cpp  scim_service.h  session_manager.cpp  session_manager.h  totp_service.cpp  totp_service.h
src/cache/: cache_migrator.cpp  cache_migrator.h  composite_summarizer.cpp  composite_summarizer.h  conversation_cache_evictor.cpp  conversation_cache_evictor.h  conversation_id_resolver.cpp  conversation_id_resolver.h  conversation_summarizer.h  embedder.cpp  embedder.h  hnsw_vector_store.cpp  hnsw_vector_store.h  milvus_vector_store.cpp  milvus_vector_store.h  onnx_embedder.cpp  onnx_embedder.h  onnx_summarizer.cpp  onnx_summarizer.h  partitioned_vector_index.cpp  partitioned_vector_index.h  qdrant_vector_store.cpp  qdrant_vector_store.h  rule_based_summarizer.cpp  rule_based_summarizer.h  semantic_cache.cpp  semantic_cache.h  summarizer_factory.cpp  summarizer_factory.h  tokenizer.cpp  tokenizer.h  vector_index.cpp  vector_index.h  vector_store.h
src/cli/: aegisctl.cpp  bench_stats.h  cache_cli.cpp  cache_cli.h  config_cli.cpp  config_cli.h  estimate_cli.cpp  estimate_cli.h  grpc_client.cpp  grpc_client.h  migrate.cpp  migrate.h  replay_cli.cpp  replay_cli.h  rollout_cli.cpp  rollout_cli.h
src/cluster/: mock_redis_state_store.h  redis_state_store.cpp  redis_state_store.h
src/common/: clock.cpp  clock.h  scope_matcher.cpp  scope_matcher.h
src/control_plane/: CMakeLists.txt  audit_bridge.cpp  audit_bridge.h  bootstrap_helper.cpp  bootstrap_helper.h  config_service_core.cpp  config_service_core.h  config_version_record.h  diff_engine.cpp  diff_engine.h  main.cpp  sensitive_scanner.cpp  sensitive_scanner.h  state_machine.cpp  state_machine.h  ulid.cpp  ulid.h
src/core/: config.cpp  config.h  context.h  crypto.cpp  crypto.h  feature_gate.cpp  feature_gate.h  pipeline.cpp  pipeline.h  pipeline_assembler.cpp  pipeline_assembler.h  rollout_config.h  rollout_resolve.cpp  rollout_resolve.h
src/gateway/: ab_test_router.cpp  ab_test_router.h  abuse_detector.cpp  abuse_detector.h  balancer.cpp  balancer.h  bandit_router.cpp  bandit_router.h  circuit_breaker.cpp  circuit_breaker.h  fallback.cpp  fallback.h  geo_router.cpp  geo_router.h  ml_router.cpp  ml_router.h  multi_objective_router.cpp  multi_objective_router.h  prompt_compressor.cpp  prompt_compressor.h  rate_limiter.cpp  rate_limiter.h  router.cpp  router.h  routing_strategy_catalog.cpp  routing_strategy_catalog.h  simhash.h  smart_max_tokens.cpp  smart_max_tokens.h
src/guardrail/: audit.cpp  audit.h  guard_explanation_builder.cpp  guard_explanation_builder.h  re2_replacement_escape.h  rule_engine.cpp  rule_engine.h
src/multimodal/: modality.cpp  modality.h  modality_handler.h  modality_rate_limiter.cpp  modality_rate_limiter.h  modality_router.cpp  modality_router.h  modality_upstream.h  openai_modality_handlers.cpp  openai_modality_handlers.h  openai_modality_upstream_adapter.h
src/observe/: alert_channels.cpp  alert_channels.h  alert_dispatcher.cpp  alert_dispatcher.h  alerting.cpp  alerting.h  anomaly_detector.cpp  anomaly_detector.h  compliance_reporter.cpp  compliance_reporter.h  cost_attribution.cpp  cost_attribution.h  cost_optimizer.cpp  cost_optimizer.h  cost_tracker.cpp  cost_tracker.h  crash_handler.cpp  crash_handler.h  feedback_bus.cpp  feedback_bus.h  feedback_event.cpp  metrics.cpp  metrics.h  metrics_feedback_subscriber.cpp  metrics_feedback_subscriber.h  quality_monitor.cpp  quality_monitor.h  quality_scorer.cpp  quality_scorer.h  request_logger.cpp  request_logger.h  router_outcome_replayer.cpp  router_outcome_replayer.h  savings_aggregator.cpp  savings_aggregator.h  token_estimator.cpp  token_estimator.h  trace_log_formatter.h  tracing.cpp  tracing.h  (+2 more)
src/plugin/: plugin_loader.cpp  plugin_loader.h  plugin_stage.h  rule_pack_manager.cpp  rule_pack_manager.h
src/rag/: knowledge_base.cpp  knowledge_base.h  retrieval_stage.cpp  retrieval_stage.h
src/server/: ab_attribution.h  admin_controller.cpp  admin_controller.h  admin_controller_base.cpp  admin_controller_base.h  admin_governance_controller.cpp  admin_governance_controller.h  admin_handler_helpers.h  admin_http_controller.cpp  admin_http_controller.h  admin_http_helpers.cpp  admin_http_helpers.h  admin_iam_controller.cpp  admin_iam_controller.h  admin_session.cpp  admin_session.h  admin_ws_controller.cpp  admin_ws_controller.h  api_controller.cpp  api_controller.h  budget_guard_stage.cpp  budget_guard_stage.h  cache_savings.h  case_study_builder.cpp  case_study_builder.h  gateway_runtime.cpp  gateway_runtime.h  modality_quota_enforcer.cpp  modality_quota_enforcer.h  openapi_spec.h.in  proxy_billing.h  response_finalizer.h  response_headers.h  router_outcome_publisher.h  scim_http_controller.cpp  scim_http_controller.h  sse_response.cpp  sse_response.h  version.h.in
src/storage/: approval_proposal_record.h  approval_proposal_schema.h  cache_store.h  connection_pool.h  json_helpers.h  memory_cache_store.cpp  memory_cache_store.h  memory_persistent_store.cpp  memory_persistent_store.h  rollout_schema.h  (+8 more)
(+850 files in other folders)
