[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegisgate"
version = "0.1.0"
description = "Python SDK for AegisGate AI Gateway"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "AegisGate" }
]
keywords = ["aegisgate", "ai", "gateway", "openai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Repository = "https://github.com/privonyx/loong-aegisgate"
Homepage = "https://github.com/privonyx/loong-aegisgate"
Issues = "https://github.com/privonyx/loong-aegisgate/issues"

[tool.hatch.build.targets.wheel]
packages = ["aegisgate"]

[tool.hatch.build.targets.sdist]
include = ["aegisgate"]
