[package]
name = "aegisgate"
version = "1.0.0"
edition = "2021"
description = "Rust SDK for AegisGate AI Gateway"
license = "MIT"
repository = "https://github.com/privonyx/loong-aegisgate"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
thiserror = "2"
tracing = "0.1"
rand = "0.8"
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
