add_subdirectory(common)
add_subdirectory(core)
add_subdirectory(gateway)
add_subdirectory(guardrail)
add_subdirectory(observe)
add_subdirectory(cache)
add_subdirectory(multimodal)
add_subdirectory(storage)
add_subdirectory(server)
add_subdirectory(cli)
add_subdirectory(auth)
add_subdirectory(cluster)
add_subdirectory(plugin)
add_subdirectory(agent)
add_subdirectory(rag)
add_subdirectory(control_plane)
add_subdirectory(autonomy)
add_subdirectory(workflow)
